[package]
name = "wirebrush"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
maud = { version = "0.25.0", features = ["actix-web"] }
mime = "0.3.17"
pulldown-cmark = "0.9.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
grass = "0.12.4"
